# CAD

./: .gitignore  Cargo.toml
config/: editor-chrome.json
crates/editor/: Cargo.toml
crates/editor-ui/: Cargo.toml
crates/editor-ui/src/: app.rs  asset_watcher.rs  audio_engine.rs  chrome.rs  lib.rs  project.rs  shell.rs  viewport_bridge.rs
crates/editor-ui/src/components/: README.md  console.rs  content_browser.rs  hierarchy.rs  inspector.rs  menu_bar.rs  mod.rs  profiler.rs  status_bar.rs  toolbar.rs  viewport.rs  viewport_3d.rs  workspace.rs
crates/editor/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: assets.rs  audio.rs  capabilities.rs  events.rs  hooks.rs  input.rs  lib.rs  picking.rs  play.rs  reflection.rs  scripting.rs  world.rs
crates/engine/src/commands/: component.rs  entity.rs  mod.rs  prefab.rs  stack.rs  transform.rs
crates/engine/src/mesh/: gltf.rs  mod.rs
crates/engine/src/scene/: document.rs  id.rs  mod.rs
crates/reflect-derive/: Cargo.toml
crates/reflect-derive/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  lib.rs  surface.rs
crates/render/src/mesh/: asset.rs  cube.rs  mod.rs  primitives.rs  vertex.rs
crates/render/src/pipeline/: builder.rs  mesh.rs  mod.rs
crates/render/src/renderer/: blit.rs  cube.rs  grid.rs  mesh_instance.rs  mod.rs  offscreen.rs  shadow.rs  triangle.rs
crates/render/src/shader/: blit.wgsl  cube.wgsl  grid.wgsl  mod.rs  shadow.wgsl  triangle_2d.wgsl
crates/render/src/texture/: mod.rs
doc/: IMPL_NEXT.md  IMPL_PHASES.md  IMPL_ROADMAP_11_PLUS.md  master-plan.md  phase1.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase15.md  phase16.md  phase17.md  phase18.md  phase19.md  phase2.md  phase20.md  phase21.md  phase22.md  phase23.md  phase24.md  phase25.md  phase26.md  phase27.md  phase28.md  phase29.md  phase3.md  phase30.md  phase31.md  phase32.md  phase33.md  phase34.md  phase35.md  phase36.md  phase37.md  phase38.md  phase39.md  phase4.md  phase40.md  phase41.md  (+16 more)
lib/: Cargo.toml
lib/rustcad/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
lib/rustcad/examples/: event_bus.rs  id_alloc.rs  input_snapshot.rs  undo_stack.rs
lib/rustcad/src/: events.rs  id.rs  input.rs  lib.rs  math.rs  undo.rs
lib/rustcad/src/cad/: boolean.rs  command.rs  constraint.rs  core.rs  kernel.rs  math.rs  mesh.rs  mod.rs  modifier.rs  parametric.rs  render.rs  sketch.rs  tessellation.rs
projects/sandbox/: rustforge-project.json
projects/sandbox/assets/materials/: default.material.ron
projects/sandbox/assets/meshes/: tetrahedron.gltf
projects/sandbox/assets/prefabs/: player.prefab.ron
projects/sandbox/assets/scenes/: sandbox.scene.ron
projects/sandbox/assets/scripts/: spinner.rhai
