[package]
name = "render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable wgpu rendering primitives for the RustForge engine and editor."

[dependencies]
bytemuck.workspace = true
glam.workspace = true
wgpu.workspace = true
